# eclair

./: .cursorrules  .gitignore  Dockerfile  README.md  docker-compose.yml  eclair.py  env.example  hiptest.py  pyproject.toml  scratch.ipynb  validator.py
.github/workflows/: docker-publish.yml
Eclair/: tech-spec.md
Eclair/app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Eclair/app/api/: generate.js
Eclair/app/src/: App.tsx  index.css
Eclair/app/src/components/: AnimatedHeadline.tsx  InfoBlock.tsx  NavLink.tsx  StaggeredLogo.tsx  Studio.tsx  StudioInput.tsx  VerticalText.tsx
Eclair/app/src/lib/: animations.ts
Eclair/app/src/sections/: HeroSection.tsx
docs/: 00-index.md  01-overview.md  02-core-concepts.md  03-architecture.md  04-mechanism-patterns.md  05-subnet-lifecycle.md  06-building-miners.md  07-building-validators.md  08-incentive-design.md  09-python-sdk.md  13-local-development.md  14-deployment.md  15-validator-only-development.md
knowledge/: INDEX.yaml  hippius.integration.yaml
