[project]
name = "chi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affinetes",
    "aiohttp",
    "bittensor>=8.0.0",
    "bittensor-cli>=9.17.0",
    "bittensor-wallet>=2.0.0",
    "click>=8.0.0",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "loguru>=0.7.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "yt-dlp>=2025.12.8",
]
